delete로 구현 성공
